--- a/merch.html
+++ b/merch.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <title>Merchandising | Fabry Orihuela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css?v=50001">
+  <link rel="stylesheet" href="styles.css?v=91001">
 </head>
 
 <body>
@@ -19,10 +19,10 @@
       <!-- CAMISETA -->
       <div class="merch-item">
         <h3>👕 Camiseta Oficial</h3>
-        <p class="price">$25</p>
+        <p style="margin:0 0 6px; font-weight:900; font-size:18px;">$25</p>
         <p>Algodón premium • Unisex</p>
 
-        <div class="mini-slider">
+        <div class="mini-slider" aria-label="Galería camiseta">
           <div class="mini-track">
             <img src="img/camiseta-1.jpg" alt="Camiseta vista 1">
             <img src="img/camiseta-2.jpg" alt="Camiseta vista 2">
@@ -30,36 +30,48 @@
           </div>
         </div>
 
-        <a class="btn"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__"
+        <a class="button"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__%0AEntrega%20(en%20show%20o%20env%C3%ADo)%3A%20__"
            target="_blank" rel="noopener">
           👕 Comprar por WhatsApp
         </a>
 
-        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
+        <p style="margin-top:10px; opacity:.82; font-size:13px;">
+          Pagos: Cash App • Venmo • Zelle
+        </p>
       </div>
-
 
       <!-- FLASH DRIVE -->
       <div class="merch-item">
         <h3>💾 Flash Drive Oficial (2GB)</h3>
-        <p class="price">$15</p>
-        <p>Incluye versiones en vivo + canciones originales</p>
+        <p style="margin:0 0 6px; font-weight:900; font-size:18px;">$15</p>
+        <p>Material exclusivo + canciones</p>
 
-        <a class="btn"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415)"
+        <!-- Si tienes foto, descomenta esto:
+        <div class="mini-slider" aria-label="Galería flash drive">
+          <div class="mini-track">
+            <img src="img/flash-1.jpg" alt="Flash drive oficial">
+          </div>
+        </div>
+        -->
+
+        <a class="button"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0ACantidad%3A%20__%0AEntrega%20(en%20show%20o%20env%C3%ADo)%3A%20__"
            target="_blank" rel="noopener">
           💾 Comprar por WhatsApp
         </a>
 
-        <p class="pay-note">Entrega física • Ideal para shows</p>
+        <p style="margin-top:10px; opacity:.82; font-size:13px;">
+          Entrega física • Ideal para shows
+        </p>
       </div>
 
-      <a href="index.html" class="btn">⬅️ Volver</a>
-
-      <p class="small" style="text-align:center;margin-top:14px;">
+      <!-- INFO PAGOS -->
+      <p class="footer-note" style="margin-top:14px;">
         Cash App: <strong>$fabrymusic</strong> · Venmo: <strong>@fabryorihuela-music</strong> · Zelle: <strong>+1 484 544 2917</strong>
       </p>
+
+      <a href="index.html" class="button">⬅️ Volver</a>
 
     </div>
   </div>
