--- a/redes.html
+++ b/redes.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Social Media | Fabry Orihuela</title>
-
-  <link rel="stylesheet" href="styles.css?v=92001">
+  <link rel="stylesheet" href="styles.css?v=92002">
 </head>
 
 <body>
@@ -17,41 +16,26 @@
       <h1 id="title">📱 Social Media</h1>
       <p class="tagline" id="tagline">Connect with me and support my music</p>
 
-      <a class="button" href="https://www.youtube.com/@Fabricioorihuela" target="_blank" rel="noopener">
-        ▶️ YouTube
-      </a>
+      <!-- GRID 2 COLUMNAS -->
+      <div class="social-grid">
+        <a class="button" href="https://www.youtube.com/@Fabricioorihuela" target="_blank" rel="noopener">▶️ YouTube</a>
+        <a class="button" href="https://www.instagram.com/fabryorihuelaoficial" target="_blank" rel="noopener">📸 Instagram</a>
 
-      <a class="button" href="https://www.instagram.com/fabryorihuelaoficial" target="_blank" rel="noopener">
-        📸 Instagram
-      </a>
+        <a class="button" href="https://www.tiktok.com/@fabry.orihuela" target="_blank" rel="noopener">🎵 TikTok</a>
+        <a class="button" href="https://www.facebook.com/fabryorihuelaoficial/" target="_blank" rel="noopener">👍 Facebook</a>
 
-      <a class="button" href="https://www.tiktok.com/@fabry.orihuela" target="_blank" rel="noopener">
-        🎵 TikTok
-      </a>
+        <a class="button" href="https://open.spotify.com/artist/3gwUw97MMCSVKbFocMIz0a" target="_blank" rel="noopener">🟢 Spotify</a>
+        <a class="button" href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212" target="_blank" rel="noopener">🍎 Apple Music</a>
 
-      <a class="button" href="https://www.facebook.com/fabryorihuelaoficial/" target="_blank" rel="noopener">
-        👍 Facebook
-      </a>
-
-      <a class="button" href="https://open.spotify.com/artist/3gwUw97MMCSVKbFocMIz0a" target="_blank" rel="noopener">
-        🟢 Spotify
-      </a>
-
-      <a class="button" href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212" target="_blank" rel="noopener">
-        🍎 Apple Music
-      </a>
-
-      <a class="button" href="https://wa.me/14845442917" target="_blank" rel="noopener">
-        💬 WhatsApp
-      </a>
-
-      <!-- Idioma -->
-      <div style="display:flex; gap:10px; justify-content:center; margin-top:14px;">
-        <button class="button" id="btnEN" type="button" style="max-width:220px;">🇺🇸 English</button>
-        <button class="button" id="btnES" type="button" style="max-width:220px;">🇪🇸 Español</button>
+        <a class="button" href="https://wa.me/14845442917" target="_blank" rel="noopener">💬 WhatsApp</a>
+        <a class="button" href="index.html" id="backBtn">⬅️ Back</a>
       </div>
 
-      <a href="index.html" class="button" id="backBtn">⬅️ Back</a>
+      <!-- IDIOMA -->
+      <div class="lang-row">
+        <button class="button ghost" id="btnEN" type="button">🇺🇸 English</button>
+        <button class="button ghost" id="btnES" type="button">🇪🇸 Español</button>
+      </div>
 
       <p class="footer-note" id="footer">
         Thanks for following and supporting independent music 🤘
@@ -85,12 +69,66 @@
       document.getElementById("tagline").textContent = t[lang].tagline;
       document.getElementById("backBtn").textContent = t[lang].back;
       document.getElementById("footer").textContent = t[lang].footer;
+
+      // estado visual
+      document.getElementById("btnEN").classList.toggle("activeLang", lang === "en");
+      document.getElementById("btnES").classList.toggle("activeLang", lang === "es");
     }
 
     document.getElementById("btnEN").addEventListener("click", () => setLang("en"));
     document.getElementById("btnES").addEventListener("click", () => setLang("es"));
-
     setLang("en");
   </script>
+
+  <style>
+    /* ===== SOLO REDES: 2 COLUMNAS PRO ===== */
+    .social-grid{
+      display:grid;
+      gap: 12px;
+      margin-top: 10px;
+    }
+
+    /* desktop: 2 columnas */
+    @media (min-width: 760px){
+      .social-grid{
+        grid-template-columns: 1fr 1fr;
+      }
+      .social-grid .button{
+        max-width: none;  /* deja que ocupe la celda */
+        margin: 0;        /* el grid controla el espacio */
+      }
+    }
+
+    /* móvil: 1 columna */
+    @media (max-width: 759px){
+      .social-grid{
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* fila de idioma */
+    .lang-row{
+      display:flex;
+      gap: 10px;
+      justify-content:center;
+      margin-top: 14px;
+      flex-wrap:wrap;
+    }
+    .lang-row .button{
+      max-width: 220px;
+      margin: 0;
+    }
+
+    /* estilo "ghost" para idioma (más pro) */
+    .button.ghost{
+      background: rgba(10,10,14,.45) !important;
+      border: 1px solid rgba(255,255,255,.18) !important;
+      box-shadow: 0 10px 22px rgba(0,0,0,.35) !important;
+    }
+    .activeLang{
+      outline: 2px solid rgba(255,255,255,.45);
+      filter: brightness(1.05);
+    }
+  </style>
 </body>
 </html>
