--- a/musica.html
+++ b/musica.html
@@ -47,7 +47,10 @@
         <h3>🟢 Spotify</h3>
         <p data-i18n="spotifySub">Listen to all my songs and releases</p>
 
-        <a class="button"
+        <a <a class="btn-pro" href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a" target="_blank">
+  ▶️ Open Spotify
+</a>
+
            href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a"
            target="_blank" rel="noopener">
           ▶️ <span data-i18n="spotifyBtn">Open Spotify</span>
