--- a/musica.html
+++ b/musica.html
@@ -62,7 +62,8 @@
         <h3>🍎 Apple Music</h3>
         <p data-i18n="appleSub">Available on Apple Music</p>
 
-        <a class="button"
+        <a <a class="btn-pro" href="index.html">⬅️ Back</a>
+
            href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
            target="_blank" rel="noopener">
           ▶️ <span data-i18n="appleBtn">Open Apple Music</span>
