--- a/musica.html
+++ b/musica.html
@@ -47,8 +47,7 @@
         <h3>🟢 Spotify</h3>
         <p data-i18n="spotifySub">Listen to all my songs and releases</p>
 
-        <a <a class="btn-pro" href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a" target="_blank">
-  ▶️ Open Spotify
+        <a <a class="btn-pro" 
 </a>
 
            href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a"
