--- a/merch.html
+++ b/merch.html
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <a class="button"
+        <a class="btn-pro"
            href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__%0AEntrega%20(en%20show%20o%20env%C3%ADo)%3A%20__"
            target="_blank" rel="noopener">
           👕 Comprar por WhatsApp
