--- a/merch.html
+++ b/merch.html
@@ -55,7 +55,7 @@
         </div>
         -->
 
-        <a class="button"
+        <a class="btn-pro"
            href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0ACantidad%3A%20__%0AEntrega%20(en%20show%20o%20env%C3%ADo)%3A%20__"
            target="_blank" rel="noopener">
           💾 Comprar por WhatsApp
@@ -71,7 +71,7 @@
         Cash App: <strong>$fabrymusic</strong> · Venmo: <strong>@fabryorihuela-music</strong> · Zelle: <strong>+1 484 544 2917</strong>
       </p>
 
-      <a href="index.html" class="button">⬅️ Volver</a>
+      <a href="index.html" class="btn-pro">⬅️ Volver</a>
 
     </div>
   </div>
