--- a/musica.html
+++ b/musica.html
@@ -5,51 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fabry Orihuela | Music</title>
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css?v=90003">
+  <!-- Main styles -->
+  <link rel="stylesheet" href="styles.css?v=91000">
 </head>
 
 <body>
   <div class="wrap">
 
-    <!-- TOPBAR -->
+    <!-- TOP BAR -->
     <div class="topbar">
-      <div class="lang-switch" aria-label="Language switch">
+      <div class="lang-switch">
         <button id="btnEN" class="active" type="button">🇺🇸 EN</button>
         <button id="btnES" type="button">🇪🇸 ES</button>
       </div>
 
       <div class="top-actions">
         <a class="btn-metal btn-booking" href="booking.html">
-          <span>✉️</span><span data-i18n="bookingTop">Booking</span>
+          ✉️ <span data-i18n="bookingTop">Booking</span>
         </a>
 
         <a class="btn-metal" href="redes.html">
-          <span>📱</span><span data-i18n="socialTop">Social Media</span>
+          📱 <span data-i18n="socialTop">Social Media</span>
         </a>
       </div>
     </div>
 
     <!-- CARD -->
     <div class="card">
+
+      <!-- BRAND -->
       <div class="brand">
-        <img class="logo" src="img/logo.png" alt="Fabry Orihuela Logo" />
-        <h1 class="name" data-i18n="pageTitle">Music</h1>
-        <p class="tagline" data-i18n="pageTagline">Listen on digital platforms</p>
-        <p class="subtag" data-i18n="pageSub">New releases + official links</p>
+        <img class="logo" src="img/logo.png" alt="Fabry Orihuela Logo">
+        <h1 class="name" data-i18n="title">Music</h1>
+        <p class="tagline" data-i18n="tagline">Listen on digital platforms</p>
+        <p class="subtag" data-i18n="sub">New releases + official links</p>
       </div>
 
       <!-- SPOTIFY -->
-      <div class="merch-item">
+      <div class="section">
         <h3>🟢 Spotify</h3>
-        <p data-i18n="spotifySub">Listen to all my songs and releases</p>
+        <p data-i18n="spotifyText">Listen to all my songs and releases</p>
 
-        <a <a class="btn-pro" 
-</a>
-
+        <a class="btn-pro"
            href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a"
            target="_blank" rel="noopener">
           ▶️ <span data-i18n="spotifyBtn">Open Spotify</span>
@@ -57,39 +59,42 @@
       </div>
 
       <!-- APPLE MUSIC -->
-      <div class="merch-item">
+      <div class="section">
         <h3>🍎 Apple Music</h3>
-        <p data-i18n="appleSub">Available on Apple Music</p>
+        <p data-i18n="appleText">Available on Apple Music</p>
 
-        <a <a class="btn-pro" href="index.html">⬅️ Back</a>
-
+        <a class="btn-pro"
            href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
            target="_blank" rel="noopener">
           ▶️ <span data-i18n="appleBtn">Open Apple Music</span>
         </a>
       </div>
 
-      <!-- VOLVER -->
-      <a href="index.html" class="button" data-i18n="backBtn">⬅️ Back</a>
+      <!-- BACK -->
+      <a class="btn-pro" href="index.html" data-i18n="backBtn">
+        ⬅️ Back
+      </a>
 
-      <div class="foot" data-i18n="footer" style="margin-top:14px;">
+      <div class="foot" data-i18n="footer">
         Streaming links are official.<br>
         If you want a specific song, request it live.
       </div>
+
     </div>
   </div>
 
+  <!-- I18N -->
   <script>
     const t = {
       en: {
         bookingTop: "Booking",
         socialTop: "Social Media",
-        pageTitle: "Music",
-        pageTagline: "Listen on digital platforms",
-        pageSub: "New releases + official links",
-        spotifySub: "Listen to all my songs and releases",
+        title: "Music",
+        tagline: "Listen on digital platforms",
+        sub: "New releases + official links",
+        spotifyText: "Listen to all my songs and releases",
         spotifyBtn: "Open Spotify",
-        appleSub: "Available on Apple Music",
+        appleText: "Available on Apple Music",
         appleBtn: "Open Apple Music",
         backBtn: "⬅️ Back",
         footer: "Streaming links are official.<br>If you want a specific song, request it live."
@@ -97,12 +102,12 @@
       es: {
         bookingTop: "Booking",
         socialTop: "Redes",
-        pageTitle: "Música / Contenido Digital",
-        pageTagline: "Escúchame en plataformas digitales",
-        pageSub: "Lanzamientos + links oficiales",
-        spotifySub: "Escucha todas mis canciones y lanzamientos",
+        title: "Música / Contenido Digital",
+        tagline: "Escúchame en plataformas digitales",
+        sub: "Lanzamientos + links oficiales",
+        spotifyText: "Escucha todas mis canciones y lanzamientos",
         spotifyBtn: "Abrir Spotify",
-        appleSub: "Disponible también en Apple Music",
+        appleText: "Disponible también en Apple Music",
         appleBtn: "Abrir Apple Music",
         backBtn: "⬅️ Volver",
         footer: "Links oficiales de streaming.<br>Si quieres una canción específica, pídela en vivo."
@@ -113,22 +118,22 @@
     const btnEN = document.getElementById("btnEN");
     const btnES = document.getElementById("btnES");
 
-    function applyLang(newLang){
-      lang = newLang;
-      document.documentElement.lang = (lang === "es") ? "es" : "en";
-      document.title = (lang === "es") ? "Fabry Orihuela | Música" : "Fabry Orihuela | Music";
+    function applyLang(l){
+      lang = l;
+      document.documentElement.lang = l;
+      document.title = l === "es" ? "Fabry Orihuela | Música" : "Fabry Orihuela | Music";
 
-      document.querySelectorAll("[data-i18n]").forEach(el => {
-        const key = el.getAttribute("data-i18n");
-        if(t[lang][key]) el.innerHTML = t[lang][key];
+      document.querySelectorAll("[data-i18n]").forEach(el=>{
+        const key = el.dataset.i18n;
+        if(t[l][key]) el.innerHTML = t[l][key];
       });
 
-      btnEN.classList.toggle("active", lang === "en");
-      btnES.classList.toggle("active", lang === "es");
+      btnEN.classList.toggle("active", l === "en");
+      btnES.classList.toggle("active", l === "es");
     }
 
-    btnEN.addEventListener("click", () => applyLang("en"));
-    btnES.addEventListener("click", () => applyLang("es"));
+    btnEN.onclick = ()=>applyLang("en");
+    btnES.onclick = ()=>applyLang("es");
     applyLang("en");
   </script>
 </body>
