--- a/canciones.html
+++ b/canciones.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="es">
-<head>
+<head><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Repertorio – Fabry Orihuela</title>
