--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
 
     <!-- ===== VIDEO REEL ===== -->
     <div class="reel-center">
-      <div class="reel-container">
-        <iframe
-          src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&playsinline=1&modestbranding=1"
-          title="Fabry Orihuela – Live Music"
-          allowfullscreen>
-        </iframe>
-      </div>
-    </div>
+  <div class="reel-container reel-fade" id="welcomeReel">
+    <iframe
+      id="welcomeVideo"
+      src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&modestbranding=1&playsinline=1&mute=1&autoplay=1"
+      title="Fabry Orihuela - Video Presentación"
+      frameborder="0"
+      allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
 
     <!-- ===== MENU ===== -->
     <div class="menu">
