Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
     <!-- ===== VIDEO REEL ===== -->
     <div class="reel-center">
-  <div class="reel-container reel-fade" id="welcomeReel">
+  <div class="reel-container reel-zoom" id="welcomeReel">
     <iframe
       id="welcomeVideo"
       src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&modestbranding=1&playsinline=1&mute=1&autoplay=1"
       title="Fabry Orihuela - Video Presentación"
       frameborder="0"
-      allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allow="autoplay; encrypted-media; picture-in-picture"
       allowfullscreen>
     </iframe>
   </div>
