Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <h1 class="name">Fabry Orihuela</h1>
       <p class="tagline" id="tagline">Latin Music · Pop · Rock · Ballads</p>
-      <p class="subtag" id="subtag">Solo, Trio or Band Performance</p>
+      <p class="subtag" id="subtag">Solo • Trio • Band Performance</p>
     </div>
 
     <!-- ===== VIDEO REEL ===== -->
