--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     </div>
 
     <div class="top-actions">
-      <a class="btn-metal btn-booking" id="bookingTop" href="booking.html">
+      <a href="booking.html" class="btn-metal btn-booking" id="bookingTop">
+  ✉️ Booking
+</a>
   <span>✉️ Booking</span>
 </a>
       <a href="redes.html" class="btn-metal">📱 Social Media</a>
