Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
 <div class="wrap">
 
   <!-- ===== TOP BAR ===== -->
-  <div class="topbar">
-    <div class="lang-switch">
-      <button id="btnES">🇪🇸 ES</button>
-      <button id="btnEN" class="active">🇺🇸 EN</button>
-    </div>
+<div class="topbar">
 
-    <div class="top-actions">
-      <a href="booking.html" class="btn-metal btn-booking" id="bookingTop">
-  ✉️ Booking
-</a>
-  <span>✉️ Booking</span>
-</a>
-      <a href="redes.html" class="btn-metal">📱 Social Media</a>
-    </div>
+  <!-- LANGUAGE -->
+  <div class="lang-switch">
+    <button id="btnES">🇪🇸 ES</button>
+    <button id="btnEN" class="active">🇺🇸 EN</button>
   </div>
+
+  <!-- ACTIONS -->
+  <div class="top-actions">
+
+    <!-- BOOKING -->
+    <a href="booking.html" class="btn-metal btn-booking" id="bookingTop">
+      ✉️ Booking
+    </a>
+
+    <!-- SOCIAL -->
+    <a href="redes.html" class="btn-metal btn-social">
+      📱 Social Media
+    </a>
+
+  </div>
+</div>
 
   <!-- ===== CARD ===== -->
   <div class="card">
