Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -70,16 +70,14 @@
     <!-- ===== MENU ===== -->
     <div class="menu">
 
-      <a href="merch.html" class="tile">
-        <div class="tile-left">
-          <div class="badge">🛍️</div>
-          <div>
-            <div class="tile-title" id="merchTitle">Merch</div>
-            <div class="tile-sub" id="merchSub">Shirts & flash drives</div>
-          </div>
-        </div>
-        <div class="chev">›</div>
-      </a>
+      <a href="merch.html" class="card-action">
+  <div class="card-icon">🛍️</div>
+
+  <div class="card-text">
+    <div class="card-title">Merch</div>
+    <div class="card-sub">Shirts & flash drives</div>
+  </div>
+</a>
 
       <a href="musica.html" class="tile">
         <div class="tile-left">
