Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -70,38 +70,40 @@
     <!-- ===== MENU ===== -->
     <div class="menu">
 
-      <a href="merch.html" class="card-action">
-  <div class="card-icon">🛍️</div>
-
-  <div class="card-text">
-    <div class="card-title">Merch</div>
-    <div class="card-sub">Shirts & flash drives</div>
-  </div>
-</a>
-
-      <a href="musica.html" class="tile">
-        <div class="tile-left">
-          <div class="badge">🎧</div>
-          <div>
-            <div class="tile-title" id="musicTitle">Listen to my music</div>
-            <div class="tile-sub">Spotify · Apple Music</div>
-          </div>
-        </div>
-        <div class="chev">›</div>
-      </a>
-
-      <a href="canciones.html" class="tile">
-        <div class="tile-left">
-          <div class="badge">🎶</div>
-          <div>
-            <div class="tile-title" id="songTitle">Request a live song</div>
-            <div class="tile-sub">Live shows only</div>
-          </div>
-        </div>
-        <div class="chev">›</div>
-      </a>
-
+      <div class="menu">
+  <a class="tile" href="merch.html" id="btnMerch">
+    <div class="tile-left">
+      <div class="badge">🛍️</div>
+      <div class="tile-text">
+        <div class="tile-title" id="merchTitle">Merch</div>
+        <div class="tile-sub" id="merchSub">Shirts & flash drives</div>
+      </div>
     </div>
+    <div class="chev">›</div>
+  </a>
+
+  <a class="tile" href="musica.html" id="btnMusic">
+    <div class="tile-left">
+      <div class="badge">🎧</div>
+      <div class="tile-text">
+        <div class="tile-title" id="musicTitle">Listen to my music</div>
+        <div class="tile-sub" id="musicSub">Spotify • Apple Music</div>
+      </div>
+    </div>
+    <div class="chev">›</div>
+  </a>
+
+  <a class="tile" href="canciones.html" id="btnSong">
+    <div class="tile-left">
+      <div class="badge">🎶</div>
+      <div class="tile-text">
+        <div class="tile-title" id="songTitle">Request a live song</div>
+        <div class="tile-sub" id="songSub">Live shows only</div>
+      </div>
+    </div>
+    <div class="chev">›</div>
+  </a>
+</div>
 
     <!-- FOOT -->
     <div class="foot" id="footer">
