Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
 
     <!-- ===== MENU ===== -->
     <div class="menu">
-
-      <div class="menu">
-  <a class="tile" href="merch.html" id="btnMerch">
+<!-- BOTONES debajo del video -->
+<div class="menu menu-tiles">
+  <a class="tile tile-row" href="merch.html" id="btnMerch">
     <div class="tile-left">
       <div class="badge">🛍️</div>
       <div class="tile-text">
         <div class="tile-title" id="merchTitle">Merch</div>
-        <div class="tile-sub" id="merchSub">Shirts & flash drives</div>
+        <div class="tile-sub" id="merchSub">Shirts &amp; flash drives</div>
       </div>
     </div>
     <div class="chev">›</div>
   </a>
 
-  <a class="tile" href="musica.html" id="btnMusic">
+  <a class="tile tile-row" href="musica.html" id="btnMusic">
     <div class="tile-left">
       <div class="badge">🎧</div>
       <div class="tile-text">
@@ -93,7 +93,7 @@
     <div class="chev">›</div>
   </a>
 
-  <a class="tile" href="canciones.html" id="btnSong">
+  <a class="tile tile-row" href="canciones.html" id="btnSong">
     <div class="tile-left">
       <div class="badge">🎶</div>
       <div class="tile-text">
