--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 </div>
 
     <!-- ===== MENU ===== -->
-    <div class="menu">
+    
 <!-- BOTONES debajo del video -->
-<div class="menu menu-tiles">
+<div class="menu-tiles">
   <a class="tile tile-row" href="merch.html" id="btnMerch">
     <div class="tile-left">
       <div class="badge">🛍️</div>
